--- a/index.html
+++ b/index.html
@@ -1,73 +1,370 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Manual de Conducción Seguridad Dominicana - Aprende sobre seguridad vial, señales de tránsito, documentación y primeros auxilios"
+    />
+    <meta
+      name="keywords"
+      content="conducción, seguridad vial, República Dominicana, señales de tránsito, primeros auxilios"
+    />
+    <meta name="author" content="Diego Samuel y equipo" />
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MANUAL CONDUCCION SEGURIDAD DOMINICANA</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="cordova.js"></script>
-</head>
+    <title>MCSD - Manual de Conducción Seguridad Dominicana</title>
 
-<body>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="img/logo.png" />
 
-    <div class="splash">
-        <img src="img/logo2.png" alt="Logo">
+    <!-- Styles -->
+    <link rel="stylesheet" href="src/styles/main.css" />
+
+    <!-- Iconify -->
+    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
+  </head>
+
+  <body class="min-h-screen">
+    <!-- Splash Screen -->
+    <div
+      class="splash fixed inset-0 z-50 flex items-center justify-center bg-gradient-to-br from-cyan-400 via-teal-500 to-blue-600"
+    >
+      <div class="text-center animate-fade-in">
+        <img
+          src="img/logo2.png"
+          alt="MCSD Logo"
+          class="w-48 h-48 mx-auto mb-4 animate-bounce"
+        />
+        <div class="w-16 h-1 mx-auto bg-white rounded-full animate-pulse"></div>
+      </div>
     </div>
 
-    <!-- Área de logo -->
-    <header>
-        <main class="main">
-            <a href="index.html">
-                <img src="img/logo.png" alt="Logo">
-            </a>
-            <a href="index.html">
-                <div class="card-logo">
-                    <img src="img/titulo1.png" alt="Logo">
-                </div>
-            </a>
-        </main>
-    </header>
-    <!-- Menú desplegable -->
-    <div class="card-menu">
-        <button id="menu-btn"><img src="img/menu-button.png" alt="Botón de menú"></button>
-    </div>
-    <nav id="menu">
-        <ul>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="contactos.html">Contactos</a></li>
-            <li><a href="numeros.html">Numeros</a></li>
-        </ul>
-    </nav>
-    <script src="js/menu.js"></script>
-    </div>
+    <!-- Header / Navbar -->
+    <header class="fixed top-0 left-0 right-0 z-40 transition-all duration-300">
+      <div class="container mx-auto px-4 py-4">
+        <div class="flex items-center justify-between">
+          <!-- Logo -->
+          <a href="index.html" class="flex items-center gap-3 group">
+            <img
+              src="img/logo.png"
+              alt="Logo MCSD"
+              class="w-14 h-14 transition-transform group-hover:scale-110"
+            />
+            <img
+              src="img/titulo1.png"
+              alt="MCSD"
+              class="h-12 hidden sm:block"
+            />
+          </a>
 
-    <!-- Cuatro tarjetas que son botones en forma de imagen -->
-    <main class="main">
-        <div class="grid grid-column-2">
-            <a href="vehiculos.html">
-                <div class="card">
-                    <img src="img/Los vehiculos.png" alt="Imagen 1">
-                </div>
-            </a>
-            <a href="señales.html">
-                <div class="card">
-                    <img src="img/señales.png" alt="Imagen 1">
-                </div>
-            </a>
-            <a href="documentacion.html">
-                <div class="card">
-                    <img src="img/documentacion.png" alt="Imagen 1">
-                </div>
-            </a>
-            <a href="1ros auxilios.html">
-                <div class="card">
-                    <img src="img/primeros auxilios.png" alt="Imagen 1">
-                </div>
-            </a>
+          <!-- Desktop Menu -->
+          <nav class="hidden md:flex items-center gap-6">
+            <a
+              href="nosotros.html"
+              class="text-white hover:text-cyan-200 transition-colors font-medium"
+              >Nosotros</a
+            >
+            <a
+              href="contactos.html"
+              class="text-white hover:text-cyan-200 transition-colors font-medium"
+              >Contactos</a
+            >
+            <a
+              href="numeros.html"
+              class="text-white hover:text-cyan-200 transition-colors font-medium"
+              >Números</a
+            >
+          </nav>
+
+          <!-- Mobile Menu Button -->
+          <button
+            id="menu-btn"
+            class="md:hidden p-2 text-white hover:bg-white/10 rounded-lg transition-colors"
+            aria-label="Abrir menú"
+            aria-expanded="false"
+          >
+            <span class="iconify" data-icon="mdi:menu" data-width="32"></span>
+          </button>
         </div>
-    </main>
-    <script src="js/script.js"></script>
-</body>
+      </div>
+    </header>
 
+    <!-- Mobile Menu -->
+    <nav
+      id="menu"
+      class="fixed top-0 right-0 h-full w-64 bg-gradient-to-b from-teal-600 to-cyan-700 shadow-2xl z-50 transform translate-x-full transition-transform duration-300 md:hidden"
+    >
+      <div class="p-6">
+        <button
+          class="absolute top-4 right-4 p-2 text-white hover:bg-white/10 rounded-lg transition-colors"
+          onclick="document.getElementById('menu').classList.remove('menu-open')"
+        >
+          <span class="iconify" data-icon="mdi:close" data-width="24"></span>
+        </button>
+
+        <ul class="mt-12 space-y-4">
+          <li>
+            <a
+              href="index.html"
+              class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"
+            >
+              <span
+                class="iconify inline-block mr-2"
+                data-icon="mdi:home"
+                data-width="20"
+              ></span>
+              Inicio
+            </a>
+          </li>
+          <li>
+            <a
+              href="nosotros.html"
+              class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"
+            >
+              <span
+                class="iconify inline-block mr-2"
+                data-icon="mdi:account-group"
+                data-width="20"
+              ></span>
+              Nosotros
+            </a>
+          </li>
+          <li>
+            <a
+              href="contactos.html"
+              class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"
+            >
+              <span
+                class="iconify inline-block mr-2"
+                data-icon="mdi:email"
+                data-width="20"
+              ></span>
+              Contactos
+            </a>
+          </li>
+          <li>
+            <a
+              href="numeros.html"
+              class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"
+            >
+              <span
+                class="iconify inline-block mr-2"
+                data-icon="mdi:phone"
+                data-width="20"
+              ></span>
+              Números
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section
+      class="relative min-h-screen flex items-center justify-center overflow-hidden pt-20"
+    >
+      <!-- Animated Background -->
+      <div
+        class="absolute inset-0 bg-gradient-to-br from-cyan-400 via-teal-500 to-blue-600 animate-gradient"
+      ></div>
+
+      <!-- Decorative Elements -->
+      <div class="absolute inset-0 opacity-10">
+        <div
+          class="absolute top-20 left-10 w-72 h-72 bg-white rounded-full blur-3xl animate-pulse"
+        ></div>
+        <div
+          class="absolute bottom-20 right-10 w-96 h-96 bg-white rounded-full blur-3xl animate-pulse"
+          style="animation-delay: 1s"
+        ></div>
+      </div>
+
+      <!-- Content -->
+      <div class="relative z-10 container mx-auto px-4 py-12">
+        <div class="text-center mb-12 animate-fade-in-up">
+          <!-- Logo Card with Glassmorphism -->
+          <div class="inline-block glass rounded-3xl p-8 mb-8 shadow-2xl">
+            <img
+              src="img/logo.png"
+              alt="MCSD Logo"
+              class="w-32 h-32 mx-auto mb-4"
+            />
+            <h1
+              class="text-3xl md:text-4xl font-display font-bold text-white mb-2"
+            >
+              Manual de Conducción
+            </h1>
+            <p class="text-xl md:text-2xl text-white/90 font-display">
+              Seguridad Dominicana
+            </p>
+            <p class="text-sm text-white/70 mt-3">
+              Ministerio de Conducción y Seguridad Dominicana
+            </p>
+          </div>
+        </div>
+
+        <!-- Main Cards Grid -->
+        <div
+          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto"
+        >
+          <!-- Card 1: Los Vehículos -->
+          <a
+            href="vehiculos.html"
+            class="group timeline-view animate-fade-in-up animate-range-[entry_0%_cover_30%]"
+          >
+            <div
+              class="glass rounded-2xl p-6 hover:scale-105 transition-all duration-300 hover:shadow-2xl h-full"
+            >
+              <div class="flex flex-col items-center text-center">
+                <div
+                  class="w-20 h-20 mb-4 flex items-center justify-center bg-gradient-to-br from-purple-400 to-pink-500 rounded-2xl shadow-lg group-hover:rotate-6 transition-transform"
+                >
+                  <span
+                    class="iconify text-white"
+                    data-icon="mdi:car-multiple"
+                    data-width="40"
+                  ></span>
+                </div>
+                <h3 class="text-xl font-display font-bold text-white mb-2">
+                  Los Vehículos
+                </h3>
+                <p class="text-sm text-white/80">
+                  Aprende sobre tipos de vehículos y mantenimiento
+                </p>
+              </div>
+            </div>
+          </a>
+
+          <!-- Card 2: Señales de Tránsito -->
+          <a
+            href="señales.html"
+            class="group timeline-view animate-fade-in-up animate-range-[entry_10%_cover_40%]"
+          >
+            <div
+              class="glass rounded-2xl p-6 hover:scale-105 transition-all duration-300 hover:shadow-2xl h-full"
+            >
+              <div class="flex flex-col items-center text-center">
+                <div
+                  class="w-20 h-20 mb-4 flex items-center justify-center bg-gradient-to-br from-orange-400 to-yellow-500 rounded-2xl shadow-lg group-hover:rotate-6 transition-transform"
+                >
+                  <span
+                    class="iconify text-white"
+                    data-icon="mdi:traffic-light"
+                    data-width="40"
+                  ></span>
+                </div>
+                <h3 class="text-xl font-display font-bold text-white mb-2">
+                  Señales de Tránsito
+                </h3>
+                <p class="text-sm text-white/80">
+                  Reconoce y entiende todas las señales viales
+                </p>
+              </div>
+            </div>
+          </a>
+
+          <!-- Card 3: Documentación -->
+          <a
+            href="documentacion.html"
+            class="group timeline-view animate-fade-in-up animate-range-[entry_20%_cover_50%]"
+          >
+            <div
+              class="glass rounded-2xl p-6 hover:scale-105 transition-all duration-300 hover:shadow-2xl h-full"
+            >
+              <div class="flex flex-col items-center text-center">
+                <div
+                  class="w-20 h-20 mb-4 flex items-center justify-center bg-gradient-to-br from-green-400 to-emerald-500 rounded-2xl shadow-lg group-hover:rotate-6 transition-transform"
+                >
+                  <span
+                    class="iconify text-white"
+                    data-icon="mdi:file-document-multiple"
+                    data-width="40"
+                  ></span>
+                </div>
+                <h3 class="text-xl font-display font-bold text-white mb-2">
+                  Documentación
+                </h3>
+                <p class="text-sm text-white/80">
+                  Información sobre licencias, seguros y trámites
+                </p>
+              </div>
+            </div>
+          </a>
+
+          <!-- Card 4: Primeros Auxilios -->
+          <a
+            href="1ros auxilios.html"
+            class="group timeline-view animate-fade-in-up animate-range-[entry_30%_cover_60%]"
+          >
+            <div
+              class="glass rounded-2xl p-6 hover:scale-105 transition-all duration-300 hover:shadow-2xl h-full"
+            >
+              <div class="flex flex-col items-center text-center">
+                <div
+                  class="w-20 h-20 mb-4 flex items-center justify-center bg-gradient-to-br from-red-400 to-rose-500 rounded-2xl shadow-lg group-hover:rotate-6 transition-transform"
+                >
+                  <span
+                    class="iconify text-white"
+                    data-icon="mdi:medical-bag"
+                    data-width="40"
+                  ></span>
+                </div>
+                <h3 class="text-xl font-display font-bold text-white mb-2">
+                  Primeros Auxilios
+                </h3>
+                <p class="text-sm text-white/80">
+                  Conocimientos básicos para emergencias en la vía
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <!-- Scroll Indicator -->
+        <div class="text-center mt-16 animate-bounce">
+          <span
+            class="iconify text-white/50"
+            data-icon="mdi:chevron-down"
+            data-width="48"
+          ></span>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer
+      class="relative bg-gradient-to-r from-teal-700 to-cyan-800 text-white py-8"
+    >
+      <div class="container mx-auto px-4 text-center">
+        <p class="text-sm opacity-80">
+          © 2026 MCSD - Manual de Conducción Seguridad Dominicana
+        </p>
+        <p class="text-xs opacity-60 mt-2">
+          Desarrollado por Diego Samuel y equipo • v2.0
+        </p>
+      </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script type="module" src="src/js/main.js"></script>
+
+    <!-- Add menu-open class handler -->
+    <style>
+      #menu.menu-open {
+        transform: translateX(0);
+      }
+
+      #menu-overlay.active {
+        opacity: 1;
+        pointer-events: auto;
+      }
+
+      header.scrolled {
+        background: rgba(20, 184, 166, 0.95);
+        backdrop-filter: blur(10px);
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+      }
+    </style>
+  </body>
 </html>
