--- a/numeros.html
+++ b/numeros.html
@@ -1,72 +1,185 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MANUAL CONDUCCION SEGURIDAD DOMINICANA</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Números de emergencia importantes en República Dominicana">
+  <title>Números de Emergencia - MCSD</title>
+  <link rel="icon" type="image/png" href="img/logo.png">
+  <link rel="stylesheet" href="src/styles/main.css">
+  <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
+</head>
 
-    <body>
+<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50">
 
-        <!-- Área de logo -->
-        <header>
-            <main class="main">
-                <a href="index.html">
-                    <img src="img/logo.png" alt="Logo">
-                </a>
-                <a href="index.html">
-                    <div class="card-logo">
-                        <img src="img/titulo_numeros.png" alt="Logo">
-                    </div>
-                </a>
-            </main>
-        </header>
-        <!-- Menú desplegable -->
-        <div class="card-menu">
-            <button id="menu-btn"><img src="img/menu-button.png" alt="Botón de menú"></button>
-        </div>
-        <nav id="menu">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contactos.html">Contactos</a></li>
-            </ul>
+  <!-- Header / Navbar -->
+  <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-r from-teal-600 to-cyan-700 shadow-lg">
+    <div class="container mx-auto px-4 py-4">
+      <div class="flex items-center justify-between">
+        <a href="index.html" class="flex items-center gap-3 group">
+          <img src="img/logo.png" alt="Logo MCSD" class="w-14 h-14 transition-transform group-hover:scale-110">
+          <img src="img/titulo_numeros.png" alt="Números" class="h-12 hidden sm:block">
+        </a>
+
+        <nav class="hidden md:flex items-center gap-6">
+          <a href="index.html" class="text-white hover:text-cyan-200 transition-colors font-medium">Inicio</a>
+          <a href="nosotros.html" class="text-white hover:text-cyan-200 transition-colors font-medium">Nosotros</a>
+          <a href="contactos.html" class="text-white hover:text-cyan-200 transition-colors font-medium">Contactos</a>
         </nav>
-        <script src="js/menu.js"></script>
-        </div>
 
-        <!-- Cuatro tarjetas que son botones en forma de imagen -->
-        <main class="main">
-            <center>
-                <div class="card-text">
-                    <b>
-                    <font text size="6" color="#333">NUMEROS TELEFÓNICOS</font>
-                </b>
-                    <p>
-                        <font text size="5" color="#202020">Recuerda llevar contigo estos números telefónicos, para en caso de una emergencia, tengas la asistencia pronta y necesaria, ya sea dentro o fuera de casa.
-                    </p>     
-            <p style align="center">
-                    </font>
-                </div>
-            </center>
-            <a href="tel: +18095742540">
-                <div class="card-numeros">
-                    <img src="img/policia nacional.png" alt="Imagen 1">
-                </div>
-            </a>
-            <a href="tel: +18095744271">
-                <div class="card-numeros">
-                    <img src="img/cuerpo de bomberos.png" alt="Imagen 1">
-                </div>
-            </a>
-            <a href="tel: +18096866520">
-                <div class="card-numeros">
-                    <img src="img/digesett.png" alt="Imagen 1">
-                </div>
-            </a>
-        </main>
-        <script src="js/script.js"></script>
-    </body>
+        <button id="menu-btn"
+                class="md:hidden p-2 text-white hover:bg-white/10 rounded-lg transition-colors"
+                aria-label="Abrir menú"
+                aria-expanded="false">
+          <span class="iconify" data-icon="mdi:menu" data-width="32"></span>
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <!-- Mobile Menu -->
+  <nav id="menu" class="fixed top-0 right-0 h-full w-64 bg-gradient-to-b from-teal-600 to-cyan-700 shadow-2xl z-50 transform translate-x-full transition-transform duration-300 md:hidden">
+    <div class="p-6">
+      <button class="absolute top-4 right-4 p-2 text-white hover:bg-white/10 rounded-lg transition-colors" onclick="document.getElementById('menu').classList.remove('menu-open')">
+        <span class="iconify" data-icon="mdi:close" data-width="24"></span>
+      </button>
+
+      <ul class="mt-12 space-y-4">
+        <li><a href="index.html" class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:home" data-width="20"></span>Inicio</a></li>
+        <li><a href="nosotros.html" class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:account-group" data-width="20"></span>Nosotros</a></li>
+        <li><a href="contactos.html" class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:email" data-width="20"></span>Contactos</a></li>
+        <li><a href="numeros.html" class="block px-4 py-3 text-white bg-white/10 rounded-lg font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:phone" data-width="20"></span>Números</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="pt-24 pb-16">
+    <div class="container mx-auto px-4">
+
+      <!-- Page Title -->
+      <div class="text-center mb-12 animate-fade-in-up">
+        <h1 class="text-4xl md:text-5xl font-display font-bold gradient-text mb-4">Números de Emergencia</h1>
+        <p class="text-lg text-gray-600 max-w-2xl mx-auto">
+          Mantén estos números a mano en caso de emergencia en la vía
+        </p>
+      </div>
+
+      <!-- Emergency Numbers Grid -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-4xl mx-auto mb-12">
+
+        <!-- Policía Nacional -->
+        <a href="tel:911"
+           class="timeline-view animate-slide-in-left animate-range-[entry_0%_cover_30%]">
+          <div class="bg-white rounded-2xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 hover:-translate-y-2">
+            <div class="h-2 bg-gradient-to-r from-blue-500 to-blue-700"></div>
+            <div class="p-6 flex items-center gap-4">
+              <div class="w-16 h-16 flex items-center justify-center bg-gradient-to-br from-blue-500 to-blue-700 rounded-xl shadow-lg flex-shrink-0">
+                <span class="iconify text-white animate-pulse" data-icon="mdi:police-badge" data-width="32"></span>
+              </div>
+              <div class="flex-1">
+                <h3 class="text-xl font-display font-bold text-gray-800 mb-1">Policía Nacional</h3>
+                <p class="text-3xl font-bold text-blue-600">911</p>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <!-- Bomberos -->
+        <a href="tel:911"
+           class="timeline-view animate-slide-in-right animate-range-[entry_0%_cover_30%]">
+          <div class="bg-white rounded-2xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 hover:-translate-y-2">
+            <div class="h-2 bg-gradient-to-r from-red-500 to-orange-600"></div>
+            <div class="p-6 flex items-center gap-4">
+              <div class="w-16 h-16 flex items-center justify-center bg-gradient-to-br from-red-500 to-orange-600 rounded-xl shadow-lg flex-shrink-0">
+                <span class="iconify text-white animate-pulse" data-icon="mdi:fire-truck" data-width="32"></span>
+              </div>
+              <div class="flex-1">
+                <h3 class="text-xl font-display font-bold text-gray-800 mb-1">Cuerpo de Bomberos</h3>
+                <p class="text-3xl font-bold text-red-600">911</p>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <!-- DIGESETT -->
+        <a href="tel:*462"
+           class="timeline-view animate-slide-in-left animate-range-[entry_20%_cover_50%]">
+          <div class="bg-white rounded-2xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 hover:-translate-y-2">
+            <div class="h-2 bg-gradient-to-r from-teal-500 to-cyan-600"></div>
+            <div class="p-6 flex items-center gap-4">
+              <div class="w-16 h-16 flex items-center justify-center bg-gradient-to-br from-teal-500 to-cyan-600 rounded-xl shadow-lg flex-shrink-0">
+                <span class="iconify text-white animate-pulse" data-icon="mdi:traffic-cone" data-width="32"></span>
+              </div>
+              <div class="flex-1">
+                <h3 class="text-xl font-display font-bold text-gray-800 mb-1">DIGESETT</h3>
+                <p class="text-3xl font-bold text-teal-600">*462</p>
+              </div>
+            </div>
+          </div>
+        </a>
+
+        <!-- Emergencias Médicas -->
+        <a href="tel:911"
+           class="timeline-view animate-slide-in-right animate-range-[entry_20%_cover_50%]">
+          <div class="bg-white rounded-2xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 hover:-translate-y-2">
+            <div class="h-2 bg-gradient-to-r from-green-500 to-emerald-600"></div>
+            <div class="p-6 flex items-center gap-4">
+              <div class="w-16 h-16 flex items-center justify-center bg-gradient-to-br from-green-500 to-emerald-600 rounded-xl shadow-lg flex-shrink-0">
+                <span class="iconify text-white animate-pulse" data-icon="mdi:ambulance" data-width="32"></span>
+              </div>
+              <div class="flex-1">
+                <h3 class="text-xl font-display font-bold text-gray-800 mb-1">Emergencias Médicas</h3>
+                <p class="text-3xl font-bold text-green-600">911</p>
+              </div>
+            </div>
+          </div>
+        </a>
+
+      </div>
+
+      <!-- Important Notice -->
+      <div class="max-w-2xl mx-auto timeline-view animate-fade-in-up animate-range-[entry_40%_cover_70%]">
+        <div class="glass rounded-3xl p-8 shadow-2xl">
+          <div class="flex items-start gap-4">
+            <span class="iconify text-amber-500 flex-shrink-0" data-icon="mdi:alert-circle" data-width="32"></span>
+            <div>
+              <h3 class="text-xl font-display font-bold text-gray-800 mb-2">Importante</h3>
+              <p class="text-gray-600 leading-relaxed">
+                En caso de emergencia, mantén la calma y proporciona tu ubicación exacta.
+                El número 911 es gratuito y está disponible 24/7 para atender cualquier emergencia.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Back Button -->
+      <div class="text-center mt-12">
+        <a href="index.html" class="inline-flex items-center gap-2 px-6 py-3 bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-medium rounded-lg hover:shadow-lg transition-all hover:-translate-y-1">
+          <span class="iconify" data-icon="mdi:arrow-left" data-width="20"></span>
+          Volver al Inicio
+        </a>
+      </div>
+
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-gradient-to-r from-teal-700 to-cyan-800 text-white py-8">
+    <div class="container mx-auto px-4 text-center">
+      <p class="text-sm opacity-80">© 2026 MCSD - Manual de Conducción Seguridad Dominicana</p>
+      <p class="text-xs opacity-60 mt-2">Desarrollado por Diego Samuel y equipo • v2.0</p>
+    </div>
+  </footer>
+
+  <script type="module" src="src/js/main.js"></script>
+
+  <style>
+    #menu.menu-open { transform: translateX(0); }
+    #menu-overlay.active { opacity: 1; pointer-events: auto; }
+  </style>
+</body>
 
 </html>
