--- a/contactos.html
+++ b/contactos.html
@@ -1,67 +1,153 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MANUAL CONDUCCION SEGURIDAD DOMINICANA</title>
-    <link rel="stylesheet" href="css/style.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contacta con MCSD a través de nuestras redes sociales">
+  <title>Contactos - MCSD</title>
+  <link rel="icon" type="image/png" href="img/logo.png">
+  <link rel="stylesheet" href="src/styles/main.css">
+  <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 </head>
 
-<body>
-    <!-- Área de logo -->
-    <header>
-        <main class="main">
-            <a href="index.html">
-                <img src="img/logo.png" alt="Logo">
-            </a>
-            <a href="index.html">
-                <div class="card-logo">
-                    <img src="img/titulo_contactos.png" alt="Logo">
-                </div>
-            </a>
-        </main>
-    </header>
-    <!-- Menú desplegable -->
-    <div class="card-menu">
-        <button id="menu-btn"><img src="img/menu-button.png" alt="Botón de menú"></button>
-    </div>
-    <nav id="menu">
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="numeros.html">Numeros</a></li>
-        </ul>
-    </nav>
-    <script src="js/menu.js"></script>
-    </div>
+<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50">
 
-    <!-- El texto y las imagenes -->
-    <main class="main">
-        <center>
+  <!-- Header / Navbar -->
+  <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-r from-teal-600 to-cyan-700 shadow-lg">
+    <div class="container mx-auto px-4 py-4">
+      <div class="flex items-center justify-between">
+        <a href="index.html" class="flex items-center gap-3 group">
+          <img src="img/logo.png" alt="Logo MCSD" class="w-14 h-14 transition-transform group-hover:scale-110">
+          <img src="img/titulo_contactos.png" alt="Contactos" class="h-12 hidden sm:block">
+        </a>
 
-            <div class="card-logo-PLEGU">
-                <img src="img/Logo PLEGU2.png" alt="Imagen 1">
+        <nav class="hidden md:flex items-center gap-6">
+          <a href="index.html" class="text-white hover:text-cyan-200 transition-colors font-medium">Inicio</a>
+          <a href="nosotros.html" class="text-white hover:text-cyan-200 transition-colors font-medium">Nosotros</a>
+          <a href="numeros.html" class="text-white hover:text-cyan-200 transition-colors font-medium">Números</a>
+        </nav>
+
+        <button id="menu-btn"
+                class="md:hidden p-2 text-white hover:bg-white/10 rounded-lg transition-colors"
+                aria-label="Abrir menú"
+                aria-expanded="false">
+          <span class="iconify" data-icon="mdi:menu" data-width="32"></span>
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <!-- Mobile Menu -->
+  <nav id="menu" class="fixed top-0 right-0 h-full w-64 bg-gradient-to-b from-teal-600 to-cyan-700 shadow-2xl z-50 transform translate-x-full transition-transform duration-300 md:hidden">
+    <div class="p-6">
+      <button class="absolute top-4 right-4 p-2 text-white hover:bg-white/10 rounded-lg transition-colors" onclick="document.getElementById('menu').classList.remove('menu-open')">
+        <span class="iconify" data-icon="mdi:close" data-width="24"></span>
+      </button>
+
+      <ul class="mt-12 space-y-4">
+        <li><a href="index.html" class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:home" data-width="20"></span>Inicio</a></li>
+        <li><a href="nosotros.html" class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:account-group" data-width="20"></span>Nosotros</a></li>
+        <li><a href="contactos.html" class="block px-4 py-3 text-white bg-white/10 rounded-lg font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:email" data-width="20"></span>Contactos</a></li>
+        <li><a href="numeros.html" class="block px-4 py-3 text-white hover:bg-white/10 rounded-lg transition-colors font-medium"><span class="iconify inline-block mr-2" data-icon="mdi:phone" data-width="20"></span>Números</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="pt-24 pb-16">
+    <div class="container mx-auto px-4">
+
+      <!-- Page Title -->
+      <div class="text-center mb-12 animate-fade-in-up">
+        <h1 class="text-4xl md:text-5xl font-display font-bold gradient-text mb-4">Contáctanos</h1>
+        <p class="text-lg text-gray-600 max-w-2xl mx-auto">
+          Síguenos en nuestras redes sociales para estar al día con información sobre seguridad vial
+        </p>
+      </div>
+
+      <!-- Social Media Cards -->
+      <div class="flex flex-wrap justify-center items-center gap-8 max-w-4xl mx-auto mb-12">
+
+        <!-- Facebook -->
+        <a href="#" target="_blank" rel="noopener noreferrer"
+           class="group timeline-view animate-zoom-in animate-range-[entry_0%_cover_30%]">
+          <div class="bg-white rounded-2xl shadow-xl p-8 hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 w-40 h-40 flex flex-col items-center justify-center">
+            <div class="w-20 h-20 mb-3 flex items-center justify-center bg-gradient-to-br from-blue-500 to-blue-700 rounded-2xl shadow-lg group-hover:scale-110 transition-transform">
+              <span class="iconify text-white" data-icon="mdi:facebook" data-width="48"></span>
             </div>
-        </center>
-        <a href="https://www.facebook.com/plegu.jc">
-            <div class="card-contactos">
-                <img src="img/facebook.png" alt="Logo">
-            </div>
+            <p class="text-sm font-medium text-gray-700">Facebook</p>
+          </div>
         </a>
-        <a href="https://www.instagram.com/p/CqYj8ahuPcZ/">
-            <div class="card-contactos">
-                <img src="img/instagram.png" alt="Logo">
+
+        <!-- Instagram -->
+        <a href="#" target="_blank" rel="noopener noreferrer"
+           class="group timeline-view animate-zoom-in animate-range-[entry_10%_cover_40%]">
+          <div class="bg-white rounded-2xl shadow-xl p-8 hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 w-40 h-40 flex flex-col items-center justify-center">
+            <div class="w-20 h-20 mb-3 flex items-center justify-center bg-gradient-to-br from-pink-500 via-purple-500 to-indigo-500 rounded-2xl shadow-lg group-hover:scale-110 transition-transform">
+              <span class="iconify text-white" data-icon="mdi:instagram" data-width="48"></span>
             </div>
+            <p class="text-sm font-medium text-gray-700">Instagram</p>
+          </div>
         </a>
-        <a href="https://www.youtube.com/@PLEGU/featured">
-            <div class="card-contactos">
-                <img src="img/youtube2.png" alt="Logo">
+
+        <!-- YouTube -->
+        <a href="#" target="_blank" rel="noopener noreferrer"
+           class="group timeline-view animate-zoom-in animate-range-[entry_20%_cover_50%]">
+          <div class="bg-white rounded-2xl shadow-xl p-8 hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 w-40 h-40 flex flex-col items-center justify-center">
+            <div class="w-20 h-20 mb-3 flex items-center justify-center bg-gradient-to-br from-red-500 to-red-700 rounded-2xl shadow-lg group-hover:scale-110 transition-transform">
+              <span class="iconify text-white" data-icon="mdi:youtube" data-width="48"></span>
             </div>
+            <p class="text-sm font-medium text-gray-700">YouTube</p>
+          </div>
         </a>
-    </main>
-    <script src="js/script.js"></script>
+
+      </div>
+
+      <!-- Contact Info Card -->
+      <div class="max-w-2xl mx-auto timeline-view animate-fade-in-up animate-range-[entry_30%_cover_60%]">
+        <div class="glass rounded-3xl p-8 shadow-2xl">
+          <div class="text-center">
+            <span class="iconify text-teal-600 mb-4" data-icon="mdi:email-outline" data-width="64"></span>
+            <h2 class="text-2xl font-display font-bold text-gray-800 mb-4">¿Tienes alguna pregunta?</h2>
+            <p class="text-gray-600 mb-6">
+              Estamos aquí para ayudarte con cualquier duda sobre seguridad vial y conducción responsable
+            </p>
+            <div class="flex flex-wrap justify-center gap-4">
+              <a href="mailto:info@mcsd.do" class="inline-flex items-center gap-2 px-6 py-3 bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-medium rounded-lg hover:shadow-lg transition-all hover:-translate-y-1">
+                <span class="iconify" data-icon="mdi:email" data-width="20"></span>
+                Enviar Email
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Back Button -->
+      <div class="text-center mt-12">
+        <a href="index.html" class="inline-flex items-center gap-2 px-6 py-3 bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-medium rounded-lg hover:shadow-lg transition-all hover:-translate-y-1">
+          <span class="iconify" data-icon="mdi:arrow-left" data-width="20"></span>
+          Volver al Inicio
+        </a>
+      </div>
+
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-gradient-to-r from-teal-700 to-cyan-800 text-white py-8">
+    <div class="container mx-auto px-4 text-center">
+      <p class="text-sm opacity-80">© 2026 MCSD - Manual de Conducción Seguridad Dominicana</p>
+      <p class="text-xs opacity-60 mt-2">Desarrollado por Diego Samuel y equipo • v2.0</p>
+    </div>
+  </footer>
+
+  <script type="module" src="src/js/main.js"></script>
+
+  <style>
+    #menu.menu-open { transform: translateX(0); }
+    #menu-overlay.active { opacity: 1; pointer-events: auto; }
+  </style>
 </body>
 
 </html>
